add ut_thermodynamic_critical_time_step close #29

--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -11,3 +11,16 @@ author = {Christian Willberg and Jan-Timo Hesse and Marc Garbade and Martin Räd
 keywords = {Peridynamics, User material, UMAT, Interface, Material modeling, Damage model},
 abstract = {User materials (UMAT) in finite element codes allow the researchers or engineers to apply their own material routines. Simple software interfaces are specified to represent the material behavior in software. In order to use these already existing and often validated models to Peridynamics a UMAT interface is presented. It allows the simplified use of already existing material routines in the peridynamic framework Peridigm. The interface is based on the Abaqus UMAT definition and allows the integration of Fortran routines directly into Peridigm. The integration of already existing UMAT routines based in Peridigm eliminates the need for redevelopment and reprogramming material models from classical continuum mechanics theory. In addition, the same material model implementations are applicable in finite element as well as peridynamic simulations. This opens up new possibilities for analysis, verification and comparison. With this interface many material routines can be reused and applied to progressive failure analysis. The source code is stored in a GitHub repository.}
 }
+@article{Oterkus2014,
+title = {Fully coupled peridynamic thermomechanics},
+journal = {Journal of the Mechanics and Physics of Solids},
+volume = {64},
+pages = {1-23},
+year = {2014},
+issn = {0022-5096},
+doi = {https://doi.org/10.1016/j.jmps.2013.10.011},
+url = {https://www.sciencedirect.com/science/article/pii/S0022509613002196},
+author = {Selda Oterkus and Erdogan Madenci and Abigail Agwai},
+keywords = {Peridynamics, Thermal, Deformation, Coupled, Thermomechanics},
+abstract = {This study concerns the derivation of the coupled peridynamic (PD) thermomechanics equations based on thermodynamic considerations. The generalized peridynamic model for fully coupled thermomechanics is derived using the conservation of energy and the free-energy function. Subsequently, the bond-based coupled PD thermomechanics equations are obtained by reducing the generalized formulation. These equations are also cast into their nondimensional forms. After describing the numerical solution scheme, solutions to certain coupled thermomechanical problems with known previous solutions are presented.}
+}
