new bib entries

--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -46,3 +46,26 @@ author = {Selda Oterkus and Erdogan Madenci and Abigail Agwai},
 keywords = {Peridynamics, Thermal, Deformation, Coupled, Thermomechanics},
 abstract = {This study concerns the derivation of the coupled peridynamic (PD) thermomechanics equations based on thermodynamic considerations. The generalized peridynamic model for fully coupled thermomechanics is derived using the conservation of energy and the free-energy function. Subsequently, the bond-based coupled PD thermomechanics equations are obtained by reducing the generalized formulation. These equations are also cast into their nondimensional forms. After describing the numerical solution scheme, solutions to certain coupled thermomechanical problems with known previous solutions are presented.}
 }
+
+@article{Oterkus2014,
+title = {Fully coupled peridynamic thermomechanics},
+journal = {Journal of the Mechanics and Physics of Solids},
+volume = {64},
+pages = {1-23},
+year = {2014},
+issn = {0022-5096},
+doi = {https://doi.org/10.1016/j.jmps.2013.10.011},
+url = {https://www.sciencedirect.com/science/article/pii/S0022509613002196},
+author = {Selda Oterkus and Erdogan Madenci and Abigail Agwai},
+keywords = {Peridynamics, Thermal, Deformation, Coupled, Thermomechanics},
+abstract = {This study concerns the derivation of the coupled peridynamic (PD) thermomechanics equations based on thermodynamic considerations. The generalized peridynamic model for fully coupled thermomechanics is derived using the conservation of energy and the free-energy function. Subsequently, the bond-based coupled PD thermomechanics equations are obtained by reducing the generalized formulation. These equations are also cast into their nondimensional forms. After describing the numerical solution scheme, solutions to certain coupled thermomechanical problems with known previous solutions are presented.}
+}
+
+@Article{BrighentiR2021,
+  author   = {Roberto Brighenti and Migbar Assefa Zeleke and Mesfin Belayneh Ageze},
+  journal  = {Journal of Engineering},
+  title    = {{A Review of Peridynamics (PD) Theory of Diffusion Based Problems}},
+  year     = {2021},
+  pages    = {20},
+  doi      = {10.1155/2021/7782326},
+}
