--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -69,3 +69,42 @@ abstract = {This study concerns the derivation of the coupled peridynamic (PD) t
   pages    = {20},
   doi      = {10.1155/2021/7782326},
 }
+
+@article{LittlewoodDJ2013,
+title = {Estimation of the Critical Time Step for Peridynamic Models.},
+author = {Littlewood, David John and Shelton, Timothy and Thomas, Jesse David},
+doi = {},
+url = {https://www.osti.gov/biblio/1140383}, journal = {},
+number = ,
+volume = ,
+place = {United States},
+year = {2013},
+month = {7}
+} 
+
+@book{BobaruF2016,
+  Title                    = {Handbook of Peridynamic Modeling},
+  Author                   = {Bobaru, Florin and Foster, John T. and Geubelle, P. H. and Silling, Stewart A.},
+  Series                   = {Advances in Applied Mathematics},
+  Publisher                = {CRC Press},
+  ISBN                     = {978-1315355948},
+  Year                     = {2016},
+}
+
+﻿@Article{LittlewoodDJ2023,
+author={Littlewood, David J.
+and Parks, Michael L.
+and Foster, John T.
+and Mitchell, John A.
+and Diehl, Patrick},
+title={The Peridigm Meshfree Peridynamics Code},
+journal={Journal of Peridynamics and Nonlocal Modeling},
+year={2023},
+month={May},
+day={08},
+abstract={Peridigm is a meshfree peridynamics code written in C++ for use on large-scale parallel computers. It was originally developed at Sandia National Laboratories and is currently managed as an open-source, community driven software project. Its primary features include bond-based, state-based, and non-ordinary state-based constitutive models, bond failure laws, contact, and support for explicit and implicit time integration. To date, Peridigm has been used primarily by methods developers focused on solid mechanics and material failure. Peridigm utilizes foundational software components from Sandia's Trilinos project and was designed for extensibility. This paper provides an overview of the solution methods implemented in Peridigm, a discussion of its software infrastructure, and demonstrates the use of Peridigm for the solution of several example problems.},
+issn={2522-8978},
+doi={10.1007/s42102-023-00100-0},
+url={https://doi.org/10.1007/s42102-023-00100-0}
+}
+
