new doc structure

--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -74,10 +74,9 @@ abstract = {This study concerns the derivation of the coupled peridynamic (PD) t
 title = {Estimation of the Critical Time Step for Peridynamic Models.},
 author = {Littlewood, David John and Shelton, Timothy and Thomas, Jesse David},
 doi = {},
-url = {https://www.osti.gov/biblio/1140383}, journal = {},
-number = ,
-volume = ,
-place = {United States},
+url = {https://www.osti.gov/biblio/1140383}, 
+journal = {},
+number = {},
 year = {2013},
 month = {7}
 } 
