--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -1,3 +1,19 @@
+
+@article{HesseJA2023,
+author = {Hesse, Jan-Timo and Willberg, Christian and Hein, Robert and Winkelmann, Felix},
+title = {Peridynamic framework to model additive manufacturing processes},
+journal = {PAMM},
+volume = {n/a},
+number = {n/a},
+pages = {e202300033},
+doi = {https://doi.org/10.1002/pamm.202300033},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/pamm.202300033},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/pamm.202300033},
+abstract = {Abstract This paper introduces a novel framework for analyzing additive manufacturing processes. By employing a peridynamic mesh-free implementation, it overcomes certain limitations encountered with finite element-based approaches in regard to defects and fractures. The framework includes the implementation of thermodynamical material behavior and a novel boundary detection algorithm, as the outer surface area will undergo changes during the manufacturing process. The proposed methods are thoroughly validated, and a comprehensive example is provided as a demonstration.}
+}
+
+
+
 @article{WillbergC2023,
 title = {A user material interface for the Peridynamic Peridigm framework},
 journal = {SoftwareX},
