--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -12,6 +12,19 @@ eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/pamm.202300033},
 abstract = {Abstract This paper introduces a novel framework for analyzing additive manufacturing processes. By employing a peridynamic mesh-free implementation, it overcomes certain limitations encountered with finite element-based approaches in regard to defects and fractures. The framework includes the implementation of thermodynamical material behavior and a novel boundary detection algorithm, as the outer surface area will undergo changes during the manufacturing process. The proposed methods are thoroughly validated, and a comprehensive example is provided as a demonstration.}
 }
 
+@article{WillbergC2024,
+title = {PeriLab},
+journal = {SoftwareX},
+volume = {},
+pages = {},
+year = {2024},
+issn = {2352-7110},
+doi = {h},
+url = {},
+author = {Christian Willberg and Jan-Timo Hesse and Anna Pernatii},
+keywords = {},
+abstract = {}
+}
 
 
 @article{WillbergC2023,
