--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -62,7 +62,7 @@ abstract = {User materials (UMAT) in finite element codes allow the researchers 
   doi     = {10.1615/IntJMultCompEng.2011002407},
   issn    = {0020-7683},
 }
-@article{Oterkus2014,
+@article{OterkusS2014,
 title = {Fully coupled peridynamic thermomechanics},
 journal = {Journal of the Mechanics and Physics of Solids},
 volume = {64},
@@ -75,19 +75,18 @@ author = {Selda Oterkus and Erdogan Madenci and Abigail Agwai},
 keywords = {Peridynamics, Thermal, Deformation, Coupled, Thermomechanics},
 abstract = {This study concerns the derivation of the coupled peridynamic (PD) thermomechanics equations based on thermodynamic considerations. The generalized peridynamic model for fully coupled thermomechanics is derived using the conservation of energy and the free-energy function. Subsequently, the bond-based coupled PD thermomechanics equations are obtained by reducing the generalized formulation. These equations are also cast into their nondimensional forms. After describing the numerical solution scheme, solutions to certain coupled thermomechanical problems with known previous solutions are presented.}
 }
-
-@article{Oterkus2014,
-title = {Fully coupled peridynamic thermomechanics},
-journal = {Journal of the Mechanics and Physics of Solids},
-volume = {64},
-pages = {1-23},
+@article{OterkusS2014b,
+title = {Peridynamic thermal diffusion},
+journal = {Journal of Computational Physics},
+volume = {265},
+pages = {71-96},
 year = {2014},
-issn = {0022-5096},
-doi = {https://doi.org/10.1016/j.jmps.2013.10.011},
-url = {https://www.sciencedirect.com/science/article/pii/S0022509613002196},
+issn = {0021-9991},
+doi = {https://doi.org/10.1016/j.jcp.2014.01.027},
+url = {https://www.sciencedirect.com/science/article/pii/S0021999114000540},
 author = {Selda Oterkus and Erdogan Madenci and Abigail Agwai},
-keywords = {Peridynamics, Thermal, Deformation, Coupled, Thermomechanics},
-abstract = {This study concerns the derivation of the coupled peridynamic (PD) thermomechanics equations based on thermodynamic considerations. The generalized peridynamic model for fully coupled thermomechanics is derived using the conservation of energy and the free-energy function. Subsequently, the bond-based coupled PD thermomechanics equations are obtained by reducing the generalized formulation. These equations are also cast into their nondimensional forms. After describing the numerical solution scheme, solutions to certain coupled thermomechanical problems with known previous solutions are presented.}
+keywords = {Thermal, Conduction, Diffusion, Peridynamics, Nonlocal},
+abstract = {This study presents the derivation of ordinary state-based peridynamic heat conduction equation based on the Lagrangian formalism. The peridynamic heat conduction parameters are related to those of the classical theory. An explicit time stepping scheme is adopted for numerical solution of various benchmark problems with known solutions. It paves the way for applying the peridynamic theory to other physical fields such as neutronic diffusion and electrical potential distribution.}
 }
 
 @Article{BrighentiR2021,
