--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -4,6 +4,7 @@ author = {Hesse, Jan-Timo and Willberg, Christian and Hein, Robert and Winkelman
 title = {Peridynamic framework to model additive manufacturing processes},
 journal = {PAMM},
 volume = {n/a},
+year = {2023},
 number = {n/a},
 pages = {e202300033},
 doi = {https://doi.org/10.1002/pamm.202300033},
