--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -10,7 +10,65 @@ pages = {e202300033},
 doi = {https://doi.org/10.1002/pamm.202300033},
 url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/pamm.202300033},
 eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/pamm.202300033},
-abstract = {Abstract This paper introduces a novel framework for analyzing additive manufacturing processes. By employing a peridynamic mesh-free implementation, it overcomes certain limitations encountered with finite element-based approaches in regard to defects and fractures. The framework includes the implementation of thermodynamical material behavior and a novel boundary detection algorithm, as the outer surface area will undergo changes during the manufacturing process. The proposed methods are thoroughly validated, and a comprehensive example is provided as a demonstration.}
+abstract = {Abstract This paper introduces a novel framework for analyzing additive manufacturing processes. By employing a peridynamic mesh-free implementation, it overcomes certain limitations encountered with finite element-based approaches in regard to defects and fractures. The framework includes the implementation of thermodynamical material behavior and a novel boundary detection algorithm, as the outer surface area will undergo changes during the manufacturing process. The proposed methods are thoroughly validated, and a comprehensive example is provided as a demonstration.}
+}
+
+
+@Book{WillbergC2013,
+  title     = {{Development of a new isogeometric finite element and its application for Lamb wave based structural health monitoring}},
+  publisher = {VDI Verlag, ISBN: 978-3-18-344620-9},
+  year      = {2013},
+  author    = {Willberg, Christian},
+  address   = {D\"{u}sseldorf},
+  edition   = {Fortschrit},
+  abstract  = {Structural Health Monitoring (SHM) is a new, rapidly developing technology
+	for the mon- itoring of engineering structures. The main features
+	are permanent and automatic as- sessment of the structural integrity
+	by built-in devices such that non-destructive testing becomes an
+	integral part of the structure. Therefore, SHM aims at damage detection
+	and loads monitoring by intrinsic means of the structure. The tasks
+	can be defined similar to those of conventional non-destructive testing:
+	damage detection, localisation and further characterisation. Consequently,
+	this leads in an increased safety and a reduction of the maintenance
+	costs. Among different approaches, the use of ultrasonic Lamb waves
+	is an attractive method for structural health monitoring. Lamb waves
+	are able to propagate over large distances, thus wide areas of a
+	structure can be monitored. Because Lamb waves sensitively interact
+	with defects, they offer a chance for defect detection and further
+	characterization. The use of embedded or surface-attached piezoceramic
+	elements as actuators and sensors for generation and reception of
+	Lamb waves is an attractive way for designing smart SHM structures.
+	To gain a better understanding of the physics of Lamb wave, e.g.
+	interaction, damages, excitation process, efficient models are needed.
+	Furthermore, in future these models can be used to develop and optimize
+	an actuator-sensor grid for SHM systems in complex structures, e.g.
+	airplanes. Therefore, SHM applications call for both efficient and
+	powerful numerical tools to predict the behavior of Lamb waves. The
+	mesh density required to obtain good quality solutions has to be
+	rather fine both spatial and temporal. This results in enormous computational
+	costs (computational time and memory storage requirements) when ultrasonic
+	wave propagation problems are solved in the time domain. Furthermore,
+	in future design process one has to deal with complex structures.
+	To resolve the issue of complex structures the thesis utilize the
+	idea of the isogeometric element concept. The isogeometric approach
+	utilizes the non-uniform rational B-spline (NURBS) functions of the
+	geometrical description of the computer aided design (CAD) software.
+	Therefore, no meshing in the todays common way is needed. To model
+	the complete SHM structure including actuators and sensors, in this
+	thesis a three-dimensional isogeometric piezoelectric finite element
+	is developed, tested in several benchmarks and compared to other
+	numerical higher order approaches with respect to their ability to
+	model Lamb wave propagation problems. The research results are used
+	to recommend an optimal discretization scheme. To illustrate the
+	advantage of the new iso- geometric finite element two SHM specific
+	problems are investigated, namely the dynamic behavior of a piezoceramic
+	actuator and the material induced continuous mode conversion. Both
+	problems are studied numerically as well as experimentally.},
+  doi       = {10.25673/3921},
+  file      = {:H$\backslash$:/Eigene Dateien/diss/VDI/vdi\_Doktorarbeit\_Willberg.pdf:pdf},
+  keywords  = {own},
+  school    = {Otto-von-Guericke-University of Magdeburg, Fortschritt-Berichte VDI Reihe 20, Nr. 446, D\"{u}sseldorf: VDI Verlag, ISBN: 978-3-18-344620-9},
+  url       = {http://dx.doi.org/10.25673/3921},
 }
 
 @article{WillbergC2024,
