--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -177,7 +177,33 @@ month = {7}
   Year                     = {2016},
 }
 
-﻿@Article{LittlewoodDJ2023,
+@Article{SillingSA2007,
+  Title                    = {Peridynamic States and Constitutive Modeling},
+  Author                   = {Silling, Stewart A. and Epton, M. and Weckner, Olaf and Xu, J. and Askari, Ebrahim},
+  Journal                  = {Journal of Elasticity},
+  Year                     = {2007},
+  Volume                   = {88},
+  Pages                    = {151--184},
+  Doi                      = {10.1007/s10659-007-9125-1},
+}
+
+
+@Article{SillingSA2000,
+  author   = {Silling, Stewart A.},
+  journal  = {Journal of the Mechanics and Physics of Solids},
+  title    = {Reformulation of elasticity theory for discontinuities and long-range forces},
+  year     = {2000},
+  issn     = {00225096},
+  number   = {1},
+  pages    = {175--209},
+  volume   = {48},
+  doi      = {10.1016/S0022-5096(99)00029-0},
+  keywords = {dynamics, elastic material, fracture, stability and bifurcation, stress waves},
+}
+
+
+
+@Article{LittlewoodDJ2023,
 author={Littlewood, David J.
 and Parks, Michael L.
 and Foster, John T.
