--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -148,7 +148,7 @@ keywords = {Thermal, Conduction, Diffusion, Peridynamics, Nonlocal},
 abstract = {This study presents the derivation of ordinary state-based peridynamic heat conduction equation based on the Lagrangian formalism. The peridynamic heat conduction parameters are related to those of the classical theory. An explicit time stepping scheme is adopted for numerical solution of various benchmark problems with known solutions. It paves the way for applying the peridynamic theory to other physical fields such as neutronic diffusion and electrical potential distribution.}
 }
 
-@Article{BrighentiR2021,
+@article{BrighentiR2021,
   author   = {Roberto Brighenti and Migbar Assefa Zeleke and Mesfin Belayneh Ageze},
   journal  = {Journal of Engineering},
   title    = {{A Review of Peridynamics (PD) Theory of Diffusion Based Problems}},
@@ -157,16 +157,12 @@ abstract = {This study presents the derivation of ordinary state-based peridynam
   doi      = {10.1155/2021/7782326},
 }
 
-@article{LittlewoodDJ2013,
-title = {Estimation of the Critical Time Step for Peridynamic Models.},
-author = {Littlewood, David John and Shelton, Timothy and Thomas, Jesse David},
-doi = {},
-url = {https://www.osti.gov/biblio/1140383}, 
-journal = {},
-number = {},
-year = {2013},
-month = {7}
-} 
+@inproceedings{LittlewoodDJ2013,
+  title={Estimation of the Critical Time Step for Peridynamic Models.},
+  author={David J. Littlewood and Jesse D. Thomas and Timothy Shelton},
+  year={2013},
+  url={https://api.semanticscholar.org/CorpusID:123932678}
+}
 
 @book{BobaruF2016,
   Title                    = {Handbook of Peridynamic Modeling},
