--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -157,6 +157,24 @@ abstract = {This study presents the derivation of ordinary state-based peridynam
   doi      = {10.1155/2021/7782326},
 }
 
+@article{TrageserJ2020,
+author={Trageser, Jeremy
+and Seleson, Pablo},
+title={{Bond-Based Peridynamics: a Tale of Two Poisson's Ratios}},
+journal={Journal of Peridynamics and Nonlocal Modeling},
+year={2020},
+month={Sep},
+day={01},
+volume={2},
+number={3},
+pages={278-288},
+issn={2522-8978},
+doi={10.1007/s42102-019-00021-x},
+url={https://doi.org/10.1007/s42102-019-00021-x}
+}
+
+
+
 @inproceedings{LittlewoodDJ2013,
   title={Estimation of the Critical Time Step for Peridynamic Models.},
   author={David J. Littlewood and Jesse D. Thomas and Timothy Shelton},
