bib warn improvement

--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -7,7 +7,7 @@ volume = {n/a},
 year = {2023},
 number = {n/a},
 pages = {e202300033},
-doi = {https://doi.org/10.1002/pamm.202300033},
+doi = {10.1002/pamm.202300033},
 url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/pamm.202300033},
 eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/pamm.202300033},
 abstract = {Abstract This paper introduces a novel framework for analyzing additive manufacturing processes. By employing a peridynamic mesh-free implementation, it overcomes certain limitations encountered with finite element-based approaches in regard to defects and fractures. The framework includes the implementation of thermodynamical material behavior and a novel boundary detection algorithm, as the outer surface area will undergo changes during the manufacturing process. The proposed methods are thoroughly validated, and a comprehensive example is provided as a demonstration.}
@@ -93,7 +93,7 @@ volume = {21},
 pages = {101322},
 year = {2023},
 issn = {2352-7110},
-doi = {https://doi.org/10.1016/j.softx.2023.101322},
+doi = {10.1016/j.softx.2023.101322},
 url = {https://www.sciencedirect.com/science/article/pii/S2352711023000183},
 author = {Christian Willberg and Jan-Timo Hesse and Marc Garbade and Martin Rädel and Falk Heinecke and Andreas Schuster and Anna Pernatii},
 keywords = {Peridynamics, User material, UMAT, Interface, Material modeling, Damage model},
@@ -128,7 +128,7 @@ volume = {64},
 pages = {1-23},
 year = {2014},
 issn = {0022-5096},
-doi = {https://doi.org/10.1016/j.jmps.2013.10.011},
+doi = {10.1016/j.jmps.2013.10.011},
 url = {https://www.sciencedirect.com/science/article/pii/S0022509613002196},
 author = {Selda Oterkus and Erdogan Madenci and Abigail Agwai},
 keywords = {Peridynamics, Thermal, Deformation, Coupled, Thermomechanics},
@@ -141,7 +141,7 @@ volume = {265},
 pages = {71-96},
 year = {2014},
 issn = {0021-9991},
-doi = {https://doi.org/10.1016/j.jcp.2014.01.027},
+doi = {10.1016/j.jcp.2014.01.027},
 url = {https://www.sciencedirect.com/science/article/pii/S0021999114000540},
 author = {Selda Oterkus and Erdogan Madenci and Abigail Agwai},
 keywords = {Thermal, Conduction, Diffusion, Peridynamics, Nonlocal},
