--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -179,6 +179,7 @@ url={https://doi.org/10.1007/s42102-019-00021-x}
   title={Estimation of the Critical Time Step for Peridynamic Models.},
   author={David J. Littlewood and Jesse D. Thomas and Timothy Shelton},
   year={2013},
+  booktitle = {Proceedings of the 12th U.S. National Congress on Computational Mechanics},
   url={https://api.semanticscholar.org/CorpusID:123932678}
 }
 
