--- a/dev/refs.bib
+++ b/dev/refs.bib
@@ -7,7 +7,7 @@ volume = {n/a},
 year = {2023},
 number = {n/a},
 pages = {e202300033},
-doi = {https://doi.org/10.1002/pamm.202300033},
+doi = {10.1002/pamm.202300033},
 url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/pamm.202300033},
 eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/pamm.202300033},
 abstract = {Abstract This paper introduces a novel framework for analyzing additive manufacturing processes. By employing a peridynamic mesh-free implementation, it overcomes certain limitations encountered with finite element-based approaches in regard to defects and fractures. The framework includes the implementation of thermodynamical material behavior and a novel boundary detection algorithm, as the outer surface area will undergo changes during the manufacturing process. The proposed methods are thoroughly validated, and a comprehensive example is provided as a demonstration.}
@@ -93,7 +93,7 @@ volume = {21},
 pages = {101322},
 year = {2023},
 issn = {2352-7110},
-doi = {https://doi.org/10.1016/j.softx.2023.101322},
+doi = {10.1016/j.softx.2023.101322},
 url = {https://www.sciencedirect.com/science/article/pii/S2352711023000183},
 author = {Christian Willberg and Jan-Timo Hesse and Marc Garbade and Martin Rädel and Falk Heinecke and Andreas Schuster and Anna Pernatii},
 keywords = {Peridynamics, User material, UMAT, Interface, Material modeling, Damage model},
@@ -128,7 +128,7 @@ volume = {64},
 pages = {1-23},
 year = {2014},
 issn = {0022-5096},
-doi = {https://doi.org/10.1016/j.jmps.2013.10.011},
+doi = {10.1016/j.jmps.2013.10.011},
 url = {https://www.sciencedirect.com/science/article/pii/S0022509613002196},
 author = {Selda Oterkus and Erdogan Madenci and Abigail Agwai},
 keywords = {Peridynamics, Thermal, Deformation, Coupled, Thermomechanics},
@@ -141,14 +141,14 @@ volume = {265},
 pages = {71-96},
 year = {2014},
 issn = {0021-9991},
-doi = {https://doi.org/10.1016/j.jcp.2014.01.027},
+doi = {10.1016/j.jcp.2014.01.027},
 url = {https://www.sciencedirect.com/science/article/pii/S0021999114000540},
 author = {Selda Oterkus and Erdogan Madenci and Abigail Agwai},
 keywords = {Thermal, Conduction, Diffusion, Peridynamics, Nonlocal},
 abstract = {This study presents the derivation of ordinary state-based peridynamic heat conduction equation based on the Lagrangian formalism. The peridynamic heat conduction parameters are related to those of the classical theory. An explicit time stepping scheme is adopted for numerical solution of various benchmark problems with known solutions. It paves the way for applying the peridynamic theory to other physical fields such as neutronic diffusion and electrical potential distribution.}
 }
 
-@Article{BrighentiR2021,
+@article{BrighentiR2021,
   author   = {Roberto Brighenti and Migbar Assefa Zeleke and Mesfin Belayneh Ageze},
   journal  = {Journal of Engineering},
   title    = {{A Review of Peridynamics (PD) Theory of Diffusion Based Problems}},
@@ -157,16 +157,31 @@ abstract = {This study presents the derivation of ordinary state-based peridynam
   doi      = {10.1155/2021/7782326},
 }
 
-@article{LittlewoodDJ2013,
-title = {Estimation of the Critical Time Step for Peridynamic Models.},
-author = {Littlewood, David John and Shelton, Timothy and Thomas, Jesse David},
-doi = {},
-url = {https://www.osti.gov/biblio/1140383}, 
-journal = {},
-number = {},
-year = {2013},
-month = {7}
-} 
+@article{TrageserJ2020,
+author={Trageser, Jeremy
+and Seleson, Pablo},
+title={{Bond-Based Peridynamics: a Tale of Two Poisson's Ratios}},
+journal={Journal of Peridynamics and Nonlocal Modeling},
+year={2020},
+month={Sep},
+day={01},
+volume={2},
+number={3},
+pages={278-288},
+issn={2522-8978},
+doi={10.1007/s42102-019-00021-x},
+url={https://doi.org/10.1007/s42102-019-00021-x}
+}
+
+
+
+@inproceedings{LittlewoodDJ2013,
+  title={Estimation of the Critical Time Step for Peridynamic Models.},
+  author={David J. Littlewood and Jesse D. Thomas and Timothy Shelton},
+  year={2013},
+  booktitle = {Proceedings of the 12th U.S. National Congress on Computational Mechanics},
+  url={https://api.semanticscholar.org/CorpusID:123932678}
+}
 
 @book{BobaruF2016,
   Title                    = {Handbook of Peridynamic Modeling},
