--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -65,7 +65,6 @@ abstract = {Abstract This paper introduces a novel framework for analyzing addit
 	actuator and the material induced continuous mode conversion. Both
 	problems are studied numerically as well as experimentally.},
   doi       = {10.25673/3921},
-  file      = {:H$\backslash$:/Eigene Dateien/diss/VDI/vdi\_Doktorarbeit\_Willberg.pdf:pdf},
   keywords  = {own},
   school    = {Otto-von-Guericke-University of Magdeburg, Fortschritt-Berichte VDI Reihe 20, Nr. 446, D\"{u}sseldorf: VDI Verlag, ISBN: 978-3-18-344620-9},
   url       = {http://dx.doi.org/10.25673/3921},
@@ -147,6 +146,17 @@ author = {Selda Oterkus and Erdogan Madenci and Abigail Agwai},
 keywords = {Thermal, Conduction, Diffusion, Peridynamics, Nonlocal},
 abstract = {This study presents the derivation of ordinary state-based peridynamic heat conduction equation based on the Lagrangian formalism. The peridynamic heat conduction parameters are related to those of the classical theory. An explicit time stepping scheme is adopted for numerical solution of various benchmark problems with known solutions. It paves the way for applying the peridynamic theory to other physical fields such as neutronic diffusion and electrical potential distribution.}
 }
+
+@book{MadenciE2014,
+  author = {Madenci, E. and Oterkus, E.},
+  title = {Peridynamic Theory and Its Applications}, Springer New York, New York, 2014
+  publisher = {Springer New York},
+  year      = {2014},
+  doi    = {10.1007/978-1-4614-8465-3},
+  }
+
+
+
 
 @article{BrighentiR2021,
   author   = {Roberto Brighenti and Migbar Assefa Zeleke and Mesfin Belayneh Ageze},
