--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -149,14 +149,11 @@ abstract = {This study presents the derivation of ordinary state-based peridynam
 
 @book{MadenciE2014,
   author = {Madenci, E. and Oterkus, E.},
-  title = {Peridynamic Theory and Its Applications}, Springer New York, New York, 2014
+  title = {Peridynamic Theory and Its Applications},
   publisher = {Springer New York},
   year      = {2014},
   doi    = {10.1007/978-1-4614-8465-3},
-  }
-
-
-
+}
 
 @article{BrighentiR2021,
   author   = {Roberto Brighenti and Migbar Assefa Zeleke and Mesfin Belayneh Ageze},
