--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -71,18 +71,18 @@ abstract = {Abstract This paper introduces a novel framework for analyzing addit
 }
 
 @article{WillbergC2024,
-title = {PeriLab},
-journal = {SoftwareX},
-volume = {},
-pages = {},
-year = {2024},
-issn = {2352-7110},
-doi = {h},
-url = {},
-author = {Christian Willberg and Jan-Timo Hesse and Anna Pernatii},
-keywords = {},
-abstract = {}
+author={Willberg, Christian and Hesse, Jan-Timo and Pernatii, Anna},
+title={{PeriLab - Peridynamic Laboratory}},
+journal={SoftwareX},
+year={2024},
+publisher={Elsevier},
+volume={26},
+issn={2352-7110},
+doi={10.1016/j.softx.2024.101700},
+url={https://doi.org/10.1016/j.softx.2024.101700}
 }
+
+
 
 
 @article{WillbergC2023,
@@ -109,6 +109,19 @@ abstract = {User materials (UMAT) in finite element codes allow the researchers 
   doi     = {10.2140/jomms.2019.14.193},
   issn    = {1559-3959},
 }
+@article{WillbergC2024b,
+author = {Willberg, Christian and Hesse, Jan-Timo and Winkelmann, Felix and Hein, Robert},
+title = {Peridynamic Framework to Model Additive Manufacturing Processes},
+journal = {Advanced Theory and Simulations},
+volume = {n/a},
+number = {n/a},
+pages = {2400818},
+keywords = {additive manufacturing, FEM, peridynamics, process simulation, thermal analysis},
+doi = {https://doi.org/10.1002/adts.202400818},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/adts.202400818},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/adts.202400818},
+}
+
 @article{FosterJT2011,
   author  = {John T. Foster and Stewart A. Silling and Weinong Chen},
   title   = {An Energy based Failure Criterion for use with Peridynamic States},
