--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -114,11 +114,9 @@ author = {Willberg, Christian and Hesse, Jan-Timo and Winkelmann, Felix and Hein
 title = {Peridynamic Framework to Model Additive Manufacturing Processes},
 journal = {Advanced Theory and Simulations},
 volume = {n/a},
+year   = {2024},
 number = {n/a},
 pages = {2400818},
-keywords = {additive manufacturing, FEM, peridynamics, process simulation, thermal analysis},
-doi = {https://doi.org/10.1002/adts.202400818},
-url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/adts.202400818},
 eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/adts.202400818},
 }
 
