--- a/dev/refs.bib
+++ b/dev/refs.bib
@@ -191,6 +191,47 @@ doi={10.1007/s42102-019-00021-x},
 url={https://doi.org/10.1007/s42102-019-00021-x}
 }
 
+@phdthesis{WillbergC2012,
+  author       = {Christian Willberg},
+  title        = {Development of a new isogeometric finite element and its application for Lamb wave based structural health monitoring},
+  school       = {Otto von Guericke University Magdeburg},
+  year         = {2012},
+  type         = {Dissertation},
+  url          = {https://opendata.uni-halle.de//handle/1981185920/11666},
+  doi          = {10.25673/3921},
+  urn          = {urn:nbn:de:gbv:ma9:1-3332},
+  note         = {Open-Access-Publikation}
+}
+
+
+@book{Zienkiewicz2013,
+  author    = {Olek C. Zienkiewicz and Robert L. Taylor and J. Z. Zhu},
+  title     = {The Finite Element Method: Its Basis and Fundamentals},
+  year      = {2013},
+  month     = {August},
+  day       = {31},
+  publisher = {Butterworth-Heinemann},
+  edition   = {7th},
+  isbn      = {978-1-85617-633-0}
+}
+
+@book{AbramowitzStegun1983,
+  author    = {Milton Abramowitz and Irene Ann Stegun},
+  editor    = {Irene Ann Stegun},
+  title     = {Handbook of Mathematical Functions with Formulas, Graphs, and Mathematical Tables},
+  year      = {1983},
+  note      = {[June 1964], Ninth reprint with additional corrections of tenth original printing with corrections (December 1972); first edition},
+  series    = {Applied Mathematics Series},
+  volume    = {55},
+  publisher = {United States Department of Commerce, National Bureau of Standards; Dover Publications},
+  address   = {Washington D.C.; New York},
+  pages     = {878},
+  isbn      = {978-0-486-61272-0},
+  lccn      = {64-60036, 65-12253},
+  mrnumber  = {0167642}
+}
+
+
 @article{WillbergC2024,
 title = {{PeriLab — Peridynamic Laboratory}},
 journal = {SoftwareX},
