--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -69,19 +69,32 @@ abstract = {Abstract This paper introduces a novel framework for analyzing addit
   school    = {Otto-von-Guericke-University of Magdeburg, Fortschritt-Berichte VDI Reihe 20, Nr. 446, D\"{u}sseldorf: VDI Verlag, ISBN: 978-3-18-344620-9},
   url       = {http://dx.doi.org/10.25673/3921},
 }
-
-@article{WillbergC2024,
-author={Willberg, Christian and Hesse, Jan-Timo and Pernatii, Anna},
-title={{PeriLab - Peridynamic Laboratory}},
-journal={SoftwareX},
-year={2024},
-publisher={Elsevier},
-volume={26},
-issn={2352-7110},
-doi={10.1016/j.softx.2024.101700},
-url={https://doi.org/10.1016/j.softx.2024.101700}
+@article{YangS2021,
+  author = {Yang, Siyang and Gu, Xin and Zhang, Qing and Xia, Xiaozhou},
+  year = {2021},
+  date = {2021-07-01},
+  title = {Bond-associated non-ordinary state-based peridynamic model for multiple spalling simulation of concrete},
+  journal = {Acta Mechanica Sinica},
+  volume = {37},
+  number = {7},
+  pages = {1104--1135},
+  abstract = {The non-ordinary state-based peridynamic (NOSB PD) model has the capability of incorporating existing constitutive relationships in the classical continuum mechanics. In the present work, we first develop an NOSB PD model corresponding to the Johnson–Holmquist II (JH-2) constitutive damage model, which can describe the severe damage of concrete under intense impact compression. Besides, the numerical oscillation problem of the NOSB PD caused by zero-energy mode is analyzed and hence a bond-associated non-ordinary state-based peridynamic (BA-NOSB PD) model is adopted to remove the oscillation. Then, the elastic deformation of a three-dimensional bar is analyzed to verify the capability of BA-NOSB PD in eliminating the numerical oscillation. Furthermore, concrete spalling caused by the interaction of incident compression wave and reflected tension wave is simulated. The dynamic tensile fracture process of concrete multiple spalling is accurately reproduced for several examples according to the spalling number and spalling thickness analysis, illustrating the approach can well simulate and analyze the concrete spalling discontinuities.},
+  issn = {1614-3116},
+  doi = {10.1007/s10409-021-01055-5},
+  url = {https://doi.org/10.1007/s10409-021-01055-5}
 }
 
+@article{GuanJ2024,
+title = {A unified bond–based peridynamic model without limitation of Poisson's ratio},
+journal = {Applied Mathematical Modelling},
+volume = {128},
+pages = {609-629},
+year = {2024},
+issn = {0307-904X},
+doi = {https://doi.org/10.1016/j.apm.2024.01.015},
+author = {Jinwei Guan and Li Guo},
+keywords = {Peridynamics, Poisson's ratio, Deformation analysis, Brittle fracture},
+}
 
 
 
